Fix flexbox alignment, remove some classes from index to make it simpler, edit css to make it easier to read

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,76 +1,167 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 body{
     display: flex;
-    flex-shrink: 0;
     flex-direction: column;
-    font-family: "Roboto", sans-serif;
-    height: 100vh;
+    font-family: Roboto, sans-serif;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    
+    min-height: 100vh;
+    /* align-items: center; */
+
 }
 
 ul{
+    display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
+    gap: 16px;
 }
 
-button, 
-.container.call-to-action{
-    background-color: #3882f6;
-    color: #F9FAF8;
+a{
+    text-decoration: none;
+    font-size: 18px;
+    color: #E5e7eb;
+}
+
+img{
+    min-width: 150px;
+    min-height: 150px;
+    border-radius: 8px;
+    border: 2px;
+    border-style: solid;
+    border-color: #3882f6;
 }
 
 
-.container{
+.header{
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 30px;
+}
+
+
+.body{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    /* margin-top: 0; */
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.hero{
     display: flex;
     flex-direction: column;
+
+    /* gap: 30px */
 }
 
-.hero, .footer{
-    background-color: #1f2937;
+.hero-container{
+    display: flex;
+    padding: 30px;
+    justify-content: space-between;
+
+}
+
+.information-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    /* justify-self: flex-start; */
+}
+
+.card-container{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+
+    
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width:min-content;
+    text-align: center;
+    text-wrap: wrap;
+    justify-content: center;
+}
+
+.quote-container, 
+.call-to-action-container{
+    display: flex;
+    /* padding: 30px; */
+    
+}
+
+.hero, 
+.footer, 
+.header{
+    background-color: #1F2937 ;
     color: #F9FAF8;
-}
-
-.hero.text{
-    font-size: 48px;
-    font-weight:bolder;
-
-}
-
-
-.information.header{
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1f2937;
 }
 
 .logo{
     font-size: 24px;
+    font-weight: bolder;
+
 }
 
-.hero.subtext,
-.links{
+
+.text{
+    font-weight: bolder;
+}
+
+.hero.text{
+    font-size:48px ;
+}
+
+.information.text{
+    font-size:36px;
+    color: #1F2937;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.subtext{
     font-size: 18px;
-    color: #E5E7EB;
 }
 
-
-.container.quote{
-    background-color: #E5E7EB;
-}
-
-.quote.text{
-    font-size: 36px light italic #1F2937;
-    font-weight: 10; 
+.quote{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #E5e7eb;
+    font-size: 36px;
+    font-weight: 100;
     font-style: italic;
 }
 
 .quote.subtext{
-    font-size: 18px;
-}
-
-.container.call-to-action{
     display: flex;
-    flex-direction: row;
-
+    color: black;
+    font-style: normal;
+    align-items: self-end;
 }
 
+.footer{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.information{
+    display: flex;
+    
+}
+
+button{
+    border-radius: 8px;
+    border:#E5e7eb;
+    background-color: #3882f6;
+    padding: 5px 20px;
+}
